style/style.css
/* ... */
.ui-dialog .ui-dialog-content.task_dlg .subtext,
.ui-dialog .ui-dialog-content.task_dlg .footer{font-size:12px;color:#444}
.ui-dialog .ui-dialog-content.task_dlg .task{display:block;width:100%;margin-top:2px}

/*About dialog*/
#abt{padding:0;margin:0}
#abt_logo{background:16px center no-repeat url(img/Dyalog_60.png);height:80px;line-height:20px;cursor:move}
#abt_contact{color:#000;float:right;text-align:right;padding:12px;cursor:default}
.dark #abt_contact{color:#ccc}
#abt_contact a,
#abt_contact a:visited,
#abt_contact a:active{color:#ed7f00;text-decoration:none}
#abt_ta_wr{position:absolute;left:5px;right:13px;top:86px;bottom:52px;width:auto}
#abt_ta{white-space:pre;word-wrap:normal;overflow-x:scroll;width:100%;height:100%;resize:none}

/*workspace explorer*/
#wse{font-family:apl,monospace;font-size:18px;text-align:left;
     background-color:#fff;overflow:auto;width:100%;height:100%;white-space:nowrap;cursor:default}
#wse div{padding-left:1em}
#wse>div{padding-left:2px}
#wse .bt_text::before{display:inline-block;width:1em;height:2ex;border-radius:50%;color:#fff;text-align:center;margin-right:.2em}
.bt_collapsed>div{display:none}
#wse .bt_text.selected{background-color:rgba(128,128,128,.5)}
#wse .bt_node_expand,#wse .bt_node_indent{display:inline-block;width:1em;height:2ex;text-align:center;margin-right:.2em}
#wse .bt_node_expand{font-family:monospace;cursor:pointer;opacity:.7}
#wse .bt_node_expand:hover{opacity:1}
#wse .bt_icon_2_1::before{content:"v";background:#f00} /*variable*/
#wse .bt_icon_2_2::before{content:"v";background:#f00} /*field*/
#wse .bt_icon_2_3::before{content:"v";background:#f00} /*property*/
#wse .bt_icon_2_6::before{content:"v";background:#f00} /*external shared variable*/
#wse .bt_icon_3_1::before{content:"f";background:#0aa} /*tradfn*/
#wse .bt_icon_3_2::before{content:"f";background:#0aa} /*dfn*/
#wse .bt_icon_3_3::before{content:"f";background:#0aa} /*derived or primitive function*/
#wse .bt_icon_3_6::before{content:"f";background:#0aa} /*external function*/
#wse .bt_icon_4_1::before{content:"o";background:#00f} /*tradop*/
#wse .bt_icon_4_2::before{content:"o";background:#00f} /*dop*/
#wse .bt_icon_4_3::before{content:"o";background:#00f} /*derived or primitive operator*/
#wse .bt_icon_9_1::before{content:"n";background:#fc0} /*user-defined namespace*/
#wse .bt_icon_1::before,
#wse .bt_icon_9_2::before{content:"n";background:#fc0} /*instance*/
#wse .bt_icon_9_4::before{content:"c";background:#fc0} /*class*/
#wse .bt_icon_9_5::before{content:"i";background:#fc0} /*interface*/
#wse .bt_icon_9_6::before{content:"c";background:#fc0} /*external class*/
#wse .bt_icon_9_7::before{content:"i";background:#fc0} /*external interface*/

#demo-keys{position:fixed;top:10px;right:10px}
#demo-keys span{font-family:apl,monospace;font-size:18px;font-size:48px;border:solid #333 1px;
                background-color:#888;color:white;margin:10px;border-radius:10px;padding:5px}

@-webkit-keyframes Waiting{0%{margin-left:0};100%{margin-left:70%}}
@keyframes         Waiting{0%{margin-left:0};100%{margin-left:70%}}

/*jQuery UI - v1.10.4 - 2014-01-17, heavily customized*/
.ui-helper-hidden{display:none}
.ui-helper-hidden-accessible{border:0;clip:rect(0 0 0 0);height:1px;margin:-1px;overflow:hidden;padding:0;position:absolute;width:1px}
.ui-helper-reset{margin:0;padding:0;border:0;outline:0;line-height:1.3;text-decoration:none;font-size:100%;list-style:none}
.ui-helper-clearfix:before,.ui-helper-clearfix:after{content:"";display:table;border-collapse:collapse}
.ui-helper-clearfix:after{clear:both}
.ui-helper-clearfix{min-height:0} /*support:IE7*/
.ui-helper-zfix{width:100%;height:100%;top:0;left:0;position:absolute;opacity:0;filter:Alpha(Opacity=0)}
.ui-state-disabled{cursor:default!important}
.ui-icon{display:block;text-indent:-99999px;overflow:hidden;background-repeat:no-repeat}
.ui-widget-overlay{position:fixed;top:0;left:0;width:100%;height:100%}
.ui-button{
  min-width:75px;display:inline-block;position:relative;overflow:visible; /*removes extra width in IE*/
  &,&:link,&:visited,&:hover,&:active{text-decoration:none;color:#000}
  &.ui-button-disabled:active{border-color:#fff #888 #888 #fff}
}
.ui-button .ui-button-text{display:block;line-height:normal;cursor:normal}
.ui-button:focus,button:focus{outline:dotted #000 1px;outline-offset:-4px}
.ui-button:active .ui-button-text{border-color:#000}
.ui-button-text-only .ui-button-text{min-width:75px;border-width:0;padding:1px 0}
.ui-button-text-only:active .ui-button-text{border-color:#808080}
.ui-button-text-only.ui-button-disabled:active .ui-button-text{border-color:transparent #808080 #808080 transparent}
input.ui-button{padding:0 5px}
.ui-buttonset{margin-right:7px}
.ui-buttonset .ui-button{margin-left:0;margin-right:-.3em}
.ui-dialog{
  border-color:#fff #888 #888 #fff;border-style:solid;border-width:1px;overflow:hidden;
  position:absolute;top:0;left:0;padding:0;outline:0;text-align:center;
  .ui-dialog-titlebar{background:#0a246a;color:#fff;padding:0 8px;margin-bottom:1px;
                      position:relative;height:22px;line-height:20px;cursor:default}
  .ui-dialog-title{float:left;margin:.1em 0;white-space:nowrap;width:90%;overflow:hidden;
                   text-overflow:ellipsis;color:white;text-align:left}
  .ui-dialog-titlebar-close{
    position:absolute;right:2px;top:50%;min-width:18px;width:18px;margin:-9px 0 0 0;padding:0;height:18px;outline:0;cursor:pointer;
    .ui-button-icon-primary{margin:-1px 0 0 -1px;background-color:#fff}
    .ui-button-text{display:none}
  }
  .ui-dialog-content{position:relative;border:0;padding:0;background:none;overflow:auto}
  .ui-resizable-se{width:12px;height:12px;right:-5px;bottom:-5px;background-position:16px 16px}
  .ui-dialog-buttonpane{
    text-align:center;border-width:1px 0 0 0;background-image:none;margin-top:.5em;padding:.3em 1em .5em .4em;
    .ui-button{margin:0 5px}
  }
}

/*right-aligned*/
.ui-resizable{position:relative}
/* ... */

